alright people, stop complaining about the scroll off crop. The page content cannot cross the toolbar barrier. (made it visible)
git-svn-id: https://repos.nextthought.com/svn/nti-svn/NextThoughtWebApp/trunk@11116 3dfb626b-079f-4ab1-a9f6-4654e5377508

--- a/src/main/resources/scss/_content.scss
+++ b/src/main/resources/scss/_content.scss
@@ -103,6 +103,16 @@
 	}
 }
 
+.scroll-shadow {
+	border-top: 1px solid #F1F1F1 !important;
+	position: absolute;
+	top: 0; left: 10px; right: 720px;
+	height: 1px;
+
+	z-index: 9999;
+}
+
+
 .gutter-shadow {
 	position: absolute;
 	top: 0; right: 0;
